--- a/Front - Proyecto/src/Usuario/output.css
+++ b/Front - Proyecto/src/Usuario/output.css
@@ -556,6 +556,10 @@ video {
   position: relative;
 }
 
+.-left-10 {
+  left: -2.5rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -580,8 +584,8 @@ video {
   right: 0.75rem;
 }
 
-.right-36 {
-  right: 9rem;
+.right-\[25rem\] {
+  right: 25rem;
 }
 
 .top-0 {
@@ -596,6 +600,14 @@ video {
   top: 3rem;
 }
 
+.top-16 {
+  top: 4rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
 .top-28 {
   top: 7rem;
 }
@@ -608,16 +620,8 @@ video {
   top: 9rem;
 }
 
-.top-40 {
-  top: 10rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
-.top-\[108px\] {
-  top: 108px;
+.top-8 {
+  top: 2rem;
 }
 
 .top-\[13\.3px\] {
@@ -642,78 +646,6 @@ video {
 
 .top-\[4rem\] {
   top: 4rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
-.right-72 {
-  right: 18rem;
-}
-
-.right-\[\] {
-  right: ;
-}
-
-.right-\[35rem\] {
-  right: 35rem;
-}
-
-.right-\[30rem\] {
-  right: 30rem;
-}
-
-.right-\[3rem\] {
-  right: 3rem;
-}
-
-.right-\[rem\] {
-  right: rem;
-}
-
-.right-\[27rem\] {
-  right: 27rem;
-}
-
-.right-\[25rem\] {
-  right: 25rem;
-}
-
-.right-\[26rem\] {
-  right: 26rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-52 {
-  top: 13rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[6\] {
-  top: 6;
-}
-
-.top-\[6\.5\] {
-  top: 6.5;
 }
 
 .top-\[6\.5rem\] {
@@ -744,6 +676,14 @@ video {
   float: right;
 }
 
+.-ml-28 {
+  margin-left: -7rem;
+}
+
+.-ml-32 {
+  margin-left: -8rem;
+}
+
 .-ml-36 {
   margin-left: -9rem;
 }
@@ -758,6 +698,10 @@ video {
 
 .-ml-\[6px\] {
   margin-left: -6px;
+}
+
+.-mt-2 {
+  margin-top: -0.5rem;
 }
 
 .-mt-3 {
@@ -790,6 +734,10 @@ video {
 
 .ml-0 {
   margin-left: 0px;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .ml-10 {
@@ -888,6 +836,14 @@ video {
   margin-right: 2rem;
 }
 
+.mr-\[10rem\] {
+  margin-right: 10rem;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -924,6 +880,10 @@ video {
   margin-top: 1.75rem;
 }
 
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
 .mt-\[2px\] {
   margin-top: 2px;
 }
@@ -948,52 +908,16 @@ video {
   margin-top: 9.6rem;
 }
 
-.mr-40 {
-  margin-right: 10rem;
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
-.mr-64 {
-  margin-right: 16rem;
+.mt-16 {
+  margin-top: 4rem;
 }
 
-.ml-36 {
-  margin-left: 9rem;
-}
-
-.mr-28 {
-  margin-right: 7rem;
-}
-
-.mr-36 {
-  margin-right: 9rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mt-0 {
-  margin-top: 0px;
-}
-
-.mr-44 {
-  margin-right: 11rem;
-}
-
-.mr-\[\] {
-  margin-right: ;
-}
-
-.mr-\[10rem\] {
-  margin-right: 10rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .box-border {
@@ -1180,10 +1104,6 @@ video {
   width: 11rem;
 }
 
-.w-\[12rem\] {
-  width: 12rem;
-}
-
 .w-\[13rem\] {
   width: 13rem;
 }
@@ -1224,6 +1144,10 @@ video {
   width: 8rem;
 }
 
+.w-\[9rem\] {
+  width: 9rem;
+}
+
 .w-auto {
   width: auto;
 }
@@ -1234,6 +1158,26 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[2rem\] {
+  width: 2rem;
+}
+
+.w-\[2\] {
+  width: 2;
+}
+
+.w-\[5rem\] {
+  width: 5rem;
+}
+
+.w-\[6rem\] {
+  width: 6rem;
 }
 
 .min-w-full {
@@ -1262,6 +1206,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1342,8 +1290,17 @@ video {
   border-bottom-width: 2px;
 }
 
+.border-t-0 {
+  border-top-width: 0px;
+}
+
 .border-none {
   border-style: none;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-gray-300 {
@@ -1394,11 +1351,6 @@ video {
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1459,12 +1411,24 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-justify {
@@ -1533,6 +1497,11 @@ video {
   color: rgb(36 17 17 / var(--tw-text-opacity));
 }
 
+.text-\[\#545151\] {
+  --tw-text-opacity: 1;
+  color: rgb(84 81 81 / var(--tw-text-opacity));
+}
+
 .text-\[\#FFFFFF\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1594,6 +1563,11 @@ video {
 .hover\:bg-\[\#ffffff\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#276B58\]:hover {
@@ -1749,11 +1723,28 @@ video {
   .md\:text-\[16px\] {
     font-size: 16px;
   }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:left-16 {
-    left: 4rem;
+  .lg\:fixed {
+    position: fixed;
+  }
+
+  .lg\:left-32 {
+    left: 8rem;
+  }
+
+  .lg\:right-36 {
+    right: 9rem;
+  }
+
+  .lg\:top-40 {
+    top: 10rem;
   }
 
   .lg\:top-\[130px\] {
@@ -1808,12 +1799,20 @@ video {
     margin-right: 0px;
   }
 
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
   .lg\:mt-5 {
     margin-top: 1.25rem;
   }
 
   .lg\:mt-\[4px\] {
     margin-top: 4px;
+  }
+
+  .lg\:ml-3 {
+    margin-left: 0.75rem;
   }
 
   .lg\:block {
@@ -1826,6 +1825,10 @@ video {
 
   .lg\:h-10 {
     height: 2.5rem;
+  }
+
+  .lg\:h-6 {
+    height: 1.5rem;
   }
 
   .lg\:h-\[64px\] {
@@ -1846,6 +1849,10 @@ video {
 
   .lg\:w-5\/6 {
     width: 83.333333%;
+  }
+
+  .lg\:w-6 {
+    width: 1.5rem;
   }
 
   .lg\:w-64 {
@@ -1876,6 +1883,10 @@ video {
     width: 90%;
   }
 
+  .lg\:w-\[13rem\] {
+    width: 13rem;
+  }
+
   .lg\:min-w-\[20rem\] {
     min-width: 20rem;
   }
@@ -1896,6 +1907,10 @@ video {
     flex-direction: row;
   }
 
+  .lg\:rounded-\[10px\] {
+    border-radius: 10px;
+  }
+
   .lg\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1905,12 +1920,30 @@ video {
     padding: 0.5rem;
   }
 
+  .lg\:p-4 {
+    padding: 1rem;
+  }
+
+  .lg\:pl-3 {
+    padding-left: 0.75rem;
+  }
+
   .lg\:text-\[10px\] {
     font-size: 10px;
   }
 
   .lg\:text-\[12px\] {
     font-size: 12px;
+  }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
