--- a/Front - Proyecto/src/Administrativo/output.css
+++ b/Front - Proyecto/src/Administrativo/output.css
@@ -660,6 +660,10 @@ video {
   top: 6.5rem;
 }
 
+.top-\[3\.7rem\] {
+  top: 3.7rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -680,12 +684,12 @@ video {
   z-index: 2;
 }
 
-.z-40 {
-  z-index: 40;
-}
-
 .float-right {
   float: right;
+}
+
+.m-3 {
+  margin: 0.75rem;
 }
 
 .m-4 {
@@ -694,6 +698,15 @@ video {
 
 .m-5 {
   margin: 1.25rem;
+}
+
+.m-1 {
+  margin: 0.25rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .-ml-28 {
@@ -888,6 +901,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-40 {
+  margin-top: 10rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -898,6 +915,10 @@ video {
 
 .mt-7 {
   margin-top: 1.75rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .mt-\[2px\] {
@@ -924,6 +945,26 @@ video {
   margin-top: 9.6rem;
 }
 
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -942,6 +983,10 @@ video {
 
 .table {
   display: table;
+}
+
+.table-row {
+  display: table-row;
 }
 
 .grid {
@@ -1048,6 +1093,18 @@ video {
   height: 100vh;
 }
 
+.h-\[126\%\] {
+  height: 126%;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
 .h-auto {
   height: auto;
 }
@@ -1058,6 +1115,10 @@ video {
 
 .min-h-\[36rem\] {
   min-height: 36rem;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-11\/12 {
@@ -1184,6 +1245,46 @@ video {
   width: 100vw;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-\[15rem\] {
+  width: 15rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -1228,6 +1329,20 @@ video {
   justify-content: space-around;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1266,6 +1381,10 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .rounded-t-xl {
@@ -1322,6 +1441,11 @@ video {
   border-color: rgb(100 116 139 / var(--tw-border-opacity));
 }
 
+.bg-\[\#184136\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 65 54 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#276B58\] {
   --tw-bg-opacity: 1;
   background-color: rgb(39 107 88 / var(--tw-bg-opacity));
@@ -1367,12 +1491,23 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
+.bg-\[\#18561E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 86 30 / var(--tw-bg-opacity));
 }
 
-.to-gray-50 {
-  --tw-gradient-to: #f9fafb var(--tw-gradient-to-position);
+.bg-\[\#237C2C\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 124 44 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#7EBBAA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(126 187 170 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 
 .object-cover {
@@ -1440,6 +1575,10 @@ video {
   text-align: justify;
 }
 
+.align-middle {
+  vertical-align: middle;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1472,6 +1611,10 @@ video {
 
 .text-\[16px\] {
   font-size: 16px;
+}
+
+.text-\[2rem\] {
+  font-size: 2rem;
 }
 
 .text-lg {
@@ -1522,9 +1665,18 @@ video {
   color: rgb(100 116 139 / var(--tw-text-opacity));
 }
 
+.text-slate-950 {
+  --tw-text-opacity: 1;
+  color: rgb(2 6 23 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[15\] {
+  color: 15;
 }
 
 .underline {
@@ -1565,6 +1717,20 @@ video {
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#237C2C\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 124 44 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#41b34c\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(65 179 76 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[7EBBAA\]:hover {
+  background-color: 7EBBAA;
 }
 
 .hover\:text-\[\#276B58\]:hover {
@@ -1667,8 +1833,16 @@ video {
     margin-top: 0px;
   }
 
+  .md\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .md\:mt-2 {
     margin-top: 0.5rem;
+  }
+
+  .md\:mt-40 {
+    margin-top: 10rem;
   }
 
   .md\:mt-\[2px\] {
@@ -1693,6 +1867,10 @@ video {
 
   .md\:h-auto {
     height: auto;
+  }
+
+  .md\:h-\[135\%\] {
+    height: 135%;
   }
 
   .md\:max-h-\[350px\] {
@@ -1733,6 +1911,10 @@ video {
 
   .md\:max-w-\[420px\] {
     max-width: 420px;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:justify-evenly {
@@ -1781,6 +1963,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:relative {
+    position: relative;
+  }
+
   .lg\:left-32 {
     left: 8rem;
   }
@@ -1803,6 +1989,10 @@ video {
 
   .lg\:top-\[86px\] {
     top: 86px;
+  }
+
+  .lg\:top-20 {
+    top: 5rem;
   }
 
   .lg\:-mt-16 {
@@ -1861,6 +2051,10 @@ video {
     margin-top: 0.75rem;
   }
 
+  .lg\:mt-40 {
+    margin-top: 10rem;
+  }
+
   .lg\:mt-5 {
     margin-top: 1.25rem;
   }
@@ -1887,6 +2081,14 @@ video {
 
   .lg\:h-\[64px\] {
     height: 64px;
+  }
+
+  .lg\:h-16 {
+    height: 4rem;
+  }
+
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:max-h-\[370px\] {
@@ -1937,6 +2139,10 @@ video {
     width: 90%;
   }
 
+  .lg\:w-16 {
+    width: 4rem;
+  }
+
   .lg\:min-w-\[20rem\] {
     min-width: 20rem;
   }
@@ -1951,6 +2157,10 @@ video {
 
   .lg\:flex-shrink-0 {
     flex-shrink: 0;
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -1985,11 +2195,28 @@ video {
   .lg\:text-\[12px\] {
     font-size: 12px;
   }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-\[22px\] {
+    font-size: 22px;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:relative {
+    position: relative;
+  }
+
   .xl\:top-44 {
     top: 11rem;
+  }
+
+  .xl\:top-20 {
+    top: 5rem;
   }
 
   .xl\:ml-10 {
@@ -2072,6 +2299,10 @@ video {
     height: 380px;
   }
 
+  .xl\:h-auto {
+    height: auto;
+  }
+
   .xl\:max-h-\[330px\] {
     max-height: 330px;
   }
@@ -2143,6 +2374,10 @@ video {
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:top-20 {
+    top: 5rem;
+  }
+
   .\32xl\:ml-\[24px\] {
     margin-left: 24px;
   }
