--- a/Front - Proyecto/src/Administrativo/VerificarBiologo/output.css
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo/output.css
@@ -544,6 +544,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.pointer-events-auto {
+  pointer-events: auto;
+}
+
 .visible {
   visibility: visible;
 }
@@ -656,6 +660,58 @@ video {
   top: 6.5rem;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.top-40 {
+  top: 10rem;
+}
+
+.top-56 {
+  top: 14rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
+.top-64 {
+  top: 16rem;
+}
+
+.top-9 {
+  top: 2.25rem;
+}
+
+.top-96 {
+  top: 24rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -690,6 +746,14 @@ video {
 
 .m-5 {
   margin: 1.25rem;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+.m-1 {
+  margin: 0.25rem;
 }
 
 .mx-auto {
@@ -933,6 +997,58 @@ video {
   margin-top: 9.6rem;
 }
 
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mt-44 {
+  margin-top: 11rem;
+}
+
+.mt-48 {
+  margin-top: 12rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.ml-3\.5 {
+  margin-left: 0.875rem;
+}
+
+.mt-\[6rem\] {
+  margin-top: 6rem;
+}
+
+.mt-\[7rem\] {
+  margin-top: 7rem;
+}
+
+.mt-\[7\+rem\] {
+  margin-top: 7+rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -1065,8 +1181,77 @@ video {
   height: 100vh;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[4\] {
+  height: 4;
+}
+
+.h-\[60\] {
+  height: 60;
+}
+
+.h-\[60\%\] {
+  height: 60%;
+}
+
+.h-\[260\%\] {
+  height: 260%;
+}
+
+.h-\[660\%\] {
+  height: 660%;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
+.h-\[0\%\] {
+  height: 0%;
+}
+
+.h-\[full\] {
+  height: full;
+}
+
+.h-svh {
+  height: 100svh;
+}
+
 .max-h-\[220px\] {
   max-height: 220px;
+}
+
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-\[40vh\] {
+  max-height: 40vh;
+}
+
+.max-h-svh {
+  max-height: 100svh;
+}
+
+.max-h-lvh {
+  max-height: 100lvh;
 }
 
 .min-h-\[36rem\] {
@@ -1075,6 +1260,22 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-\[25rem\] {
+  min-height: 25rem;
+}
+
+.min-h-\[\] {
+  min-height: ;
+}
+
+.min-h-\[80\%\] {
+  min-height: 80%;
+}
+
+.min-h-lvh {
+  min-height: 100lvh;
 }
 
 .w-10 {
@@ -1213,6 +1414,14 @@ video {
   width: 100vw;
 }
 
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -1225,8 +1434,18 @@ video {
   max-width: 40rem;
 }
 
+.border-collapse {
+  border-collapse: collapse;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .flex-row {
@@ -1257,12 +1476,20 @@ video {
   gap: 0.25rem;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
 
 .overflow-visible {
   overflow: visible;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .rounded {
@@ -1325,6 +1552,10 @@ video {
 
 .border-t-0 {
   border-top-width: 0px;
+}
+
+.border-solid {
+  border-style: solid;
 }
 
 .border-none {
@@ -1406,6 +1637,20 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#237C2C\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 124 44 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#edeaea\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 234 234 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F7EBBAA\] {
+  background-color: #F7EBBAA;
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1439,6 +1684,10 @@ video {
   padding: 0.5;
 }
 
+.p-0 {
+  padding: 0px;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1459,8 +1708,17 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
+}
+
+.pl-7 {
+  padding-left: 1.75rem;
 }
 
 .text-left {
@@ -1528,6 +1786,10 @@ video {
   line-height: 1rem;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1571,6 +1833,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\#302f2f\] {
+  --tw-text-opacity: 1;
+  color: rgb(48 47 47 / var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -1579,6 +1851,21 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.placeholder\:text-white::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-white::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.checked\:bg-gray-700:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#2e5c5c\]:hover {
@@ -1611,6 +1898,19 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#18561E\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 86 30 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#7ebbaae3\]:hover {
+  background-color: #7ebbaae3;
+}
+
+.hover\:bg-\[\#7ebbaacc\]:hover {
+  background-color: #7ebbaacc;
+}
+
 .hover\:text-\[\#276B58\]:hover {
   --tw-text-opacity: 1;
   color: rgb(39 107 88 / var(--tw-text-opacity));
@@ -1623,6 +1923,11 @@ video {
 
 .hover\:underline:hover {
   text-decoration-line: underline;
+}
+
+.focus\:border-indigo-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1727,6 +2032,14 @@ video {
     margin-top: 2px;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .md\:mr-4 {
+    margin-right: 1rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1749,6 +2062,10 @@ video {
 
   .md\:max-h-\[350px\] {
     max-height: 350px;
+  }
+
+  .md\:max-h-\[25rem\] {
+    max-height: 25rem;
   }
 
   .md\:min-h-\[72\] {
@@ -1929,6 +2246,10 @@ video {
     margin-top: 4px;
   }
 
+  .lg\:mr-10 {
+    margin-right: 2.5rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1951,6 +2272,14 @@ video {
 
   .lg\:max-h-\[370px\] {
     max-height: 370px;
+  }
+
+  .lg\:max-h-\[32rem\] {
+    max-height: 32rem;
+  }
+
+  .lg\:min-h-\[30rem\] {
+    min-height: 30rem;
   }
 
   .lg\:w-48 {
@@ -1995,6 +2324,10 @@ video {
 
   .lg\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .lg\:w-\[78\%\] {
+    width: 78%;
   }
 
   .lg\:min-w-\[20rem\] {
@@ -2042,12 +2375,29 @@ video {
     padding: 1rem;
   }
 
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .lg\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
   .lg\:text-\[10px\] {
     font-size: 10px;
   }
 
   .lg\:text-\[12px\] {
     font-size: 12px;
+  }
+
+  .lg\:text-\[1\.6rem\] {
+    font-size: 1.6rem;
+  }
+
+  .lg\:text-\[16px\] {
+    font-size: 16px;
   }
 }
 
@@ -2104,6 +2454,10 @@ video {
     margin-top: 2.25rem;
   }
 
+  .xl\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
   .xl\:block {
     display: block;
   }
@@ -2144,6 +2498,14 @@ video {
     max-height: 370px;
   }
 
+  .xl\:max-h-\[34rem\] {
+    max-height: 34rem;
+  }
+
+  .xl\:min-h-\[30rem\] {
+    min-height: 30rem;
+  }
+
   .xl\:w-48 {
     width: 12rem;
   }
@@ -2158,6 +2520,14 @@ video {
 
   .xl\:w-\[52\%\] {
     width: 52%;
+  }
+
+  .xl\:w-96 {
+    width: 24rem;
+  }
+
+  .xl\:w-\[80\%\] {
+    width: 80%;
   }
 
   .xl\:min-w-\[42rem\] {
@@ -2196,6 +2566,15 @@ video {
     padding: 1rem;
   }
 
+  .xl\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .xl\:pl-5 {
+    padding-left: 1.25rem;
+  }
+
   .xl\:text-\[14px\] {
     font-size: 14px;
   }
@@ -2203,6 +2582,18 @@ video {
   .xl\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .xl\:text-\[1\.7rem\] {
+    font-size: 1.7rem;
+  }
+
+  .xl\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .xl\:text-\[1\.8rem\] {
+    font-size: 1.8rem;
   }
 }
 
@@ -2231,6 +2622,10 @@ video {
     width: 60rem;
   }
 
+  .\32xl\:w-\[84\%\] {
+    width: 84%;
+  }
+
   .\32xl\:min-w-\[58\%\] {
     min-width: 58%;
   }
@@ -2241,6 +2636,19 @@ video {
 
   .\32xl\:flex-shrink-0 {
     flex-shrink: 0;
+  }
+
+  .\32xl\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .\32xl\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .\32xl\:text-\[18px\] {
+    font-size: 18px;
   }
 }
 
